objects/Treasury_Goals__c.object
<CustomObject>
    <fields>
        <fullName>TM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
                <value>
                    <fullName>2044</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TM_Logged_in_TSO__c</fullName>
        <description>This field will help in running the report and will be used as Filter criteria for showing logged in User&apos;s Revenue only</description>
        <formula>if(TM_Treasury_Solutions_Officer__c  = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in TSO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM_New_Commercial_Relationships_Till__c</fullName>
        <label>New Commercial Relationships Till Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM_New_Core_Treasury_Products_Sold_Till__c</fullName>
        <label>Core Treasury Products Sold Till Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM_New_Money_Commercial_Deposit_s__c</fullName>
        <label>Deposit New Money Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TM_New_Money_Till_Date__c</fullName>
        <label>New Money Till Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TM_Treasury_Solutions_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Sales Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Treasury_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TM_of_New_Commercial_Relationships__c</fullName>
        <label>New Commercial Relationships Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TM_of_New_Core_Treasury_Products_Sold__c</fullName>
        <label>Core Treasury Products Sold Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Treasury Goals</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Treasury Goals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treasury Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>